--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title      : YangOpenSource
+title      : Admirelight
 lang       : zh-cn
 description: 科技改变生活...
-copyright  : © 2021-2022 YangOpenSource. All Rights Reserved.
+copyright  : © 2021-2022 Admirelight. All Rights Reserved.
 
 nav:
  - name: 首页
    link: /
- - name: 待定
+ - name: 博客
    link: /#/            # link 是 pages 里面的文件名中的permalink
