--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title      : Admirelight
+title      : Admirelight|仰光
 lang       : zh-cn
 description: 科技改变生活...
 copyright  : © 2021-2022 Admirelight. All Rights Reserved.
