--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title      : Admirelight|仰光
+title      : Admirelight | 仰光
 lang       : zh-cn
 description: 科技改变生活...
 copyright  : © 2021-2022 Admirelight. All Rights Reserved.
@@ -7,4 +7,4 @@ nav:
  - name: 首页
    link: /
  - name: 博客
-   link: #            # link 是 pages 里面的文件名中的permalink
+   link: https://blog.admirelight.com            # link 是 pages 里面的文件名中的permalink
