--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,4 @@ nav:
  - name: 首页
    link: /
  - name: 博客
-   link: https://blog.admirelight.com            # link 是 pages 里面的文件名中的permalink
+   link: https://blog.admirelight.com            # link 是 pages 里面的文件名中的permalink，此处格式为 /forexample/
