--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ copyright  : © 2021-2022 Admirelight. All Rights Reserved.
 
 nav:
  - name: 首页
-   link: /
- - name: 博客
-   link: /blog/         # link 是 pages 里面的文件名中的permalink，此处格式为 /forexample/
+   link: /         # link 是 pages 里面的文件名中的permalink，此处格式为 /forexample/
+   
+ - name: 关于
+   link: /about/
