--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,5 @@ nav:
    link: /         # link 是 pages 里面的文件名中的permalink，此处格式为 /forexample/
  - name: 博客
    link: /blog/
+ - name: 关于
+   link: /about/
