--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title      : Admirelight | 仰光
 lang       : zh-cn
-description: 科技改变生活...
+description: 
 copyright  : © 2021-2022 Admirelight. All Rights Reserved.
 
 nav:
