--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title      : Admirelight | 仰光
 lang       : zh-cn
-description: 
+description: # 此处冒号后应空一格
 copyright  : © 2021-2022 Admirelight. All Rights Reserved.
 
 nav:
