--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title      : Admirelight | 仰光
+title      : Admirelight
 lang       : zh-cn
-description: 仰慕光明
+description: 仰慕光明 | Admirelight | 仰光
 copyright  : © 2021-2022 Admirelight. All Rights Reserved.
 
 nav:
