--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ copyright  : © 2021-2022 Nanking. All Rights Reserved.
 nav:
  - name: 首页
    link: /         # link 是 pages 里面的文件名中的permalink，此处格式为 /forexample/
- - name: 目录
+ - name: 博客
    link: /blog/
  - name: 关于
    link: /about/
