--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title      : Nanking
 lang       : zh-cn
-description: 每件事都要会亿点点……
+description: <address>webmaster &lt;hi@nanking.top&gt;</address>
 copyright  : © 2021-2022 Nanking. All Rights Reserved.
 
 nav:
