--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title      : Nanking
+title      : Yangtze
 lang       : zh-cn
-description: <address>webmaster &lt;hi@nanking.top&gt;</address>
-copyright  : © 2021-2022 Nanking. All Rights Reserved.
+description: <address>webmaster &lt;tarns@qq.com&gt;</address>
+copyright  : © 2021-2022 Yangtze. All Rights Reserved.
 
 nav:
  - name: 首页
