--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title      : Yangtze
-lang       : zh-cn
-description: <address>webmaster &lt;tarns@qq.com&gt;</address>
-copyright  : © 2021-2022 Yangtze. All Rights Reserved.
+lang       : zh-CN
+description: <address>webmaster &lt;zy@yangtze.in&gt;</address>
+copyright  : © 2021-2023 Yangtze. All Rights Reserved.
 
 nav:
  - name: 首页
