--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title      : Yangtze
 lang       : zh-CN
-description: <address>webmaster &lt;zy@yangtze.in&gt;</address>
+description: <address>webmaster &lt;zy@yangtze.in&gt;</address> [![](https://www.eff.org/files/brstrip.gif)](https://www.eff.org/pages/blue-ribbon-campaign)
 copyright  : © 2021-2023 Yangtze. All Rights Reserved.
 
 nav:
