--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title      : Yangtze
 lang       : zh-CN
 description: <address>webmaster &lt;zy@yangtze.in&gt;</address>
-copyright  : © 2021-2023 Yangtze. All Rights Reserved.
+copyright  : © 2021-2023 Yangtze. Powered by Jekyll.
 
 nav:
  - name: 首页
