--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title      : Yangtze
 lang       : zh-CN
 description: <address>webmaster &lt;zy@yangtze.in&gt;</address>
-copyright  : © 2021-2023 Yangtze. Powered by Jekyll.
+copyright  : © 2021-2023 Yangtze. Powered by <a href="netlify.com" target="_blank"><img src="https://b2.yangtze.in/pic/img/Netlify_logo.svg"></a>.
 
 nav:
  - name: 首页
